src/objects/Order_Adjustment_Batch_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>when should Order Adjustment batch job stop executing.</description>
        <inlineHelpText>when should Order Adjustment batch job stop executing.</inlineHelpText>
        <label>End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Apex script is ran through developer console, all the scheduled Order adjustment jobs will be terminated and again new schedule jobs will be created based on &quot;Is Active&quot;</description>
        <inlineHelpText>When Apex script is ran through developer console, all the scheduled Order adjustment jobs will be terminated and again new schedule jobs will be created based on &quot;Is Active&quot;</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Weekdays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Weekdays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_time__c</fullName>
        <description>Start time of the Order Adjustment batch job</description>
        <inlineHelpText>Start time of the Order Adjustment batch job</inlineHelpText>
        <label>Start time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Order Adjustment Batch Settings</label>
</CustomObject>